# image-classification-caltech101

./: .gitignore  Cargo.toml  download_and_prepare_data.sh  install_dependencies.sh
src/: main.rs
